src/stylesheets/module/_footer.scss
.footer {
    background-color: #f5f5f5;
    justify-content: center;
    height: 50vh;
    position: fixed;
    right: 0;
    bottom: 0;
    left: 0;
    text-align: center;
    z-index: -1;

    small {
        color: #b0abab;
        display: block;
        padding-top: 35px;
    }
}

.footer-unit {
    align-self: center;
}

.footer-title {
    font-weight: 700;
    margin-bottom: 1em;
}

